# tokkio-5.0.0-beta-hackathon

./: README.md
aiq-service-integration-app-source/: README.md
aiq-service-integration-app-source/llm-rag/configs/: config.yaml
aiq-service-integration-app-source/llm-rag/src/: bot.py  config.py  nvidia_aiq.py  tokkio_aiq.py
aiq-service-integration-app-source/reference-helm-chart/: tokkio-5.0.0-aiq-demo.tgz
llm-rag/src/: bot.py
multi-lingual-ace-controller-source/llm-rag/: pyproject.toml
multi-lingual-ace-controller-source/llm-rag/configs/: config.yaml
multi-lingual-app-source/: README.md
multi-lingual-app-source/reference-helm-chart/: tokkio-5.0.0-beta.tgz
