[project]
name = "tokkio-llm-rag-example"
version = "0.1.50-beta"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-pipecat==0.1.1",
    "opentelemetry-sdk==1.31.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.1",
    "opentelemetry-distro==0.52b1",
    "watchfiles==1.0.4",
    "watchdog==6.0.0",
    "torch==2.6.0+cpu",
    "pipecat-ai[openai]"
]

[tool.uv]
extra-index-url = ["https://gitlab-master.nvidia.com/api/v4/projects/155500/packages/pypi/simple"]

[tool.uv.sources]
torch = { index = "pytorch" }

# We support different ways on how you "import" the ACE Controller dependency: Depending on your use case, you can either:
# 1) Point to a local folder: (if you need to edit code in ace controller as well)
# nvidia-pipecat = { path = "../ace-controller", editable = true }

# 2) Use a specific commit from the ace-controller repo: (e.g. to test a fix in ace controller from yourself or someone else)
nvidia-pipecat = { git = "https://gitlab-master.nvidia.com/ace/ace-controller.git", rev = "8ceabe48232326ce918841b87fd9c3141cc6bcce" }

# 3) To use any internal releases of nvidia pipecat uncomment this (default)
# nvidia-pipecat = { index = "nvidia-pipecat" }


[[tool.uv.index]]
name = "nvidia-pipecat"
url = "https://gitlab-master.nvidia.com/api/v4/projects/158153/packages/pypi/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]


[tool.ruff]
line-length = 120
